# DuiDi_Code_26

./: .gitignore  关于part01,part02,part03,part04
project_code/work_space/: 03和01的区别  project_part_03(ceshi)  第一部分讨论
project_code/work_space/src/demo_python_pkg/: package.xml  setup.py
project_code/work_space/src/demo_python_pkg/demo_python_pkg/: mission_tist.py  offboard.py  python_node.py  yolo_to_point.py
project_code/work_space/src/my_work_demo/: package.xml  setup.cfg  setup.py
project_code/work_space/src/my_work_demo/my_work_demo/: calculate_secondary_waypoints.py  cv.py  dynamic_mission_01.py  first.py  first_00.py  new_part_ardu_1.py  new_part_px4_1.py  project_part_01.py  project_part_02.py  project_part_03.py  project_part_04.py  project_part_px4.py  secondary_waypoint.py  secondary_waypoint_01.py  各文件说明
project_code/work_space/src/qgc_waypoints/: dacaochang_test_02_B.plan  dacaochang_test_02_B.waypoints  waypoints_A1.kml
project_code/work_space/src/vision_msgs/: CMakeLists.txt
project_code/work_space/src/vision_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project_code/work_space/src/vision_msgs/msg/: TargetCoord.msg
project_code/work_space/src/waypoints/dacaochang/: dacaochang_test_02_A.waypoints  dacaochang_test_02_B.plan  dacaochang_test_02_B.waypoints  dacaochang_test_02_C.waypoints  waypoints_test_A.waypoints  waypoints_test_B.waypoints  waypoints_test_C.waypoints
project_code/work_space/src/waypoints/tingjiping/: 7_19_test_A.waypoints  7_19_test_B.waypoints  7_19_test_C.waypoints  test_724_A.waypoints  (+1 more)
(+24 files in other folders)
