<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_work_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="16848811+qingfeng-dream@user.noreply.gitee.com">qian</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
